<resources>
    <string name="app_name">KorobchitsAndroidPvt</string>
    <string name="image_not_found">Image not found</string>
    <string name="first_text">Lucky</string>
    <string name="second_text">Dog</string>
    <string name="button">Start</string>
    <string name="homework0">Homework_0</string>
    <string name="homework1">Homework_1</string>
    <string name="homework2part1">Homework_2:1</string>
    <string name="homework2part2">Homework_2:2</string>
    <string name="homework3">Homework_3</string>
    <string name="homework4">Homework_4</string>
    <string name="homework5part1">Homework_5:1</string>
    <string name="homework5part2">Homework_5:2</string>
    <string name="homework6">Homework_6</string>
    <string name="homework8">Homework_8</string>
    <string name="homework9">Homework_9</string>
    <string name="homework11part1">Homework_11:1</string>
    <string name="homework11part2">Homework_11:2</string>
    <string name="homework12">Homework_12</string>
    <string name="homework13">Homework_13</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="createAccount">Create account</string>
    <string name="forgotPassword"><u>Forgot your username/password?</u></string>
    <string name="pleaseEnterTheImageURL">Please enter the URL of image...</string>
    <string name="download">Download</string>
    <string name="dz3Trophies">Trophies</string>
    <string name="dz3Following">Following</string>
    <string name="dz3Followers">Followers</string>
    <string name="dz3Name">Name</string>
    <string name="dz3Country">Country</string>
    <string name="dz3PostalCode">Postal code</string>
    <string name="dz3Birth">Date of Birth</string>
    <string name="dz3Gender">Gender</string>
    <string name="dz3Height">Height</string>
    <string name="dz3Phone">Phone</string>
    <string name="dz5EnterHint">Enter space-separated numbers</string>
    <string name="dz5CreateChart">Create a chart</string>
    <string name="dz6Name">Name:</string>
    <string name="dz6Age">Age:</string>
    <string name="dz6ImageUrl">Image URL:</string>
    <string name="dz6Search">Search...</string>
    <string name="dz6DeleteButton">Delete</string>
    <string name="dz6EditButton">Edit</string>
    <string name="dz6SaveButton">Save</string>
    <string name="dz9Lat">Lat: </string>
    <string name="dz9Lng">Lng: </string>
    <string name="dz9ListOfCars">LIST OF CARS</string>
</resources>
