<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/login_logo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@color/whiteTransparentBackground"
            android:drawableStart="@drawable/ic_login_name"
            android:drawablePadding="16dp"
            android:fontFamily="@font/monda_regular"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@android:color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@color/whiteTransparentBackground"
            android:drawableStart="@drawable/ic_login_password"
            android:drawablePadding="16dp"
            android:fontFamily="@font/monda_regular"
            android:hint="@string/password"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@color/dz2Login"
            android:fontFamily="@font/monda_bold"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/monda_regular"
            android:text="@string/forgotPassword"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/dz2CreateAccount"
            android:fontFamily="@font/monda_bold"
            android:text="@string/createAccount"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>

</FrameLayout>