<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainActivityBackground">

    <ProgressBar
        android:id="@+id/dz12ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:indeterminateTint="@color/dz4Clock" />

    <ScrollView
        android:id="@+id/dz12StudentDetails"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <ImageView
                android:id="@+id/dz8ImageView"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:background="@drawable/dz6_background_white_circle"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="30dp"
                android:background="@color/dz3White"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dz8ImageView" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/linearLayout2"
                app:layout_constraintTop_toBottomOf="@id/view">

                <TextView
                    style="@style/Dz6Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dz6Name" />

                <TextView
                    android:id="@+id/dz8NameTextView"
                    style="@style/Dz6PropertyValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/linearLayout1">

                <TextView
                    style="@style/Dz6Label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dz6Age" />

                <TextView
                    android:id="@+id/dz8AgeTextView"
                    style="@style/Dz6PropertyValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@id/dz8DeleteStudentButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

            <Button
                android:id="@+id/dz8DeleteStudentButton"
                style="@style/Dz6Button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dz6_delete_button_selector"
                android:drawableStart="@drawable/ic_delete_forever_black_24dp"
                android:paddingStart="8dp"
                android:text="@string/dz6DeleteButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/dz8EditStudentButton" />

            <Button
                android:id="@+id/dz8EditStudentButton"
                style="@style/Dz6Button"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:background="@drawable/dz6_edit_button_selector"
                android:drawableStart="@drawable/ic_create_black_24dp"
                android:paddingStart="8dp"
                android:text="@string/dz6EditButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/dz8DeleteStudentButton"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>